--- a/css/style.scss
+++ b/css/style.scss
@@ -465,7 +465,8 @@ body {
         color: #ffffff;
         width: 74px;
         position: absolute;
-        display: flex;
+        padding-bottom: 12px;
+        margin-right: 10px;
     }
 
     // позиционирование текста в выпадающем меню
