--- a/css/style.scss
+++ b/css/style.scss
@@ -372,6 +372,8 @@ body {
     top: 32px;
     left: -87px;
 
+    z-index: 1;
+
     &_home {
         grid-template-columns: none;
         grid-template-rows: none;
@@ -512,6 +514,31 @@ body {
     left: auto;
 }
 
+// Блок хлебные крошки
+.breadcrumbs {
+    height: 148px;
+    background-color: #f8f3f4;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &__title {
+        font-size: 24px;
+        line-height: 20px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: $colorPink;
+    }
+
+    &__link {
+        line-height: 20px;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: #636363;
+    }
+}
+
 // Блок с центральным фото
 .hero {
     background-image: url(../img/main-photo.png);
@@ -566,11 +593,11 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 21px;
 
-    & > div:nth-child(4) {
+    &>div:nth-child(4) {
         grid-row: 2 / 4;
     }
 
-    & > div:nth-child(1) {
+    &>div:nth-child(1) {
         grid-row: 1 / 3;
     }
 
