--- a/css/style.scss
+++ b/css/style.scss
@@ -539,6 +539,21 @@ body {
     }
 }
 
+.filter-product {
+    padding-top: 60px;
+    padding-bottom: 110px;
+
+    // блок с каталогом
+    .filter {
+
+    }
+
+    // блок с фильтрами и товарами
+    .product {
+        
+    }
+ }
+
 // Блок с центральным фото
 .hero {
     background-image: url(../img/main-photo.png);
