--- a/css/style.css
+++ b/css/style.css
@@ -433,9 +433,10 @@ body {
   color: #636363;
 }
 
-.filter-product {
+.category-product {
   padding-top: 60px;
   padding-bottom: 110px;
+  display: flex;
 }
 .hero {
   background-image: url(../img/main-photo.png);
