--- a/css/style.css
+++ b/css/style.css
@@ -437,7 +437,47 @@ body {
   padding-top: 60px;
   padding-bottom: 110px;
   display: flex;
+  gap: 50px;
 }
+.category-product .category__list {
+  width: 243px;
+}
+.category-product .product_type {
+  line-height: 26px;
+  color: #6f6e6e;
+}
+.category-product .product__filter {
+  display: flex;
+  gap: 50px;
+}
+.category-product .product .product-trending {
+  width: 178px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.category-product .product .product-size {
+  width: 235px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.category-product .product__input {
+  display: flex;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  flex-wrap: wrap;
+  row-gap: 13px;
+}
+.category-product .product__lable {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #6f6e6e;
+}
+
 .hero {
   background-image: url(../img/main-photo.png);
   background-color: #e8e8e8;
