--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,7 @@ body {
 .product__filter {
   display: flex;
   gap: 50px;
+  padding-bottom: 42px;
 }
 .product_title {
   line-height: 20px;
@@ -490,9 +491,6 @@ body {
 .product input[type=range] {
   width: 262px;
 }
-.product input[type=range].slider-progress {
-  background: #F80043;
-}
 .product__lable {
   display: flex;
   gap: 5px;
@@ -505,6 +503,25 @@ body {
   display: flex;
   justify-content: space-between;
   padding-top: 10px;
+}
+.product__sort {
+  height: 50px;
+  background-color: #f3f3f3;
+  display: flex;
+  align-items: center;
+}
+.product__block {
+  display: flex;
+  align-items: center;
+  background-color: #ffffff;
+  border: 1px solid #ebebeb;
+  margin-left: 10px;
+}
+.product__name {
+  padding: 8px 8px 8px 13px;
+}
+.product__name_border {
+  border-left: 1px solid #ebebeb;
 }
 
 .hero {
