--- a/css/style.css
+++ b/css/style.css
@@ -537,14 +537,40 @@ body {
 }
 .product__button-all {
   padding-top: 64px;
+  display: flex;
+  justify-content: space-between;
 }
 .product__link_button-all {
+  display: flex;
+  align-items: center;
   width: 150px;
   height: 44px;
   background-color: #ffffff;
   border: 1px solid #f16d7f;
   border-radius: 3px;
-  padding: 15px 45px;
+  padding: 13px 45px;
+}
+.product__nav {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  background-color: #ffffff;
+  border: 1px solid #ebebeb;
+  border-radius: 3px;
+}
+.product__pagination {
+  display: flex;
+  list-style: none;
+  gap: 18px;
+}
+.product__pagination_link {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 700;
+  color: #c4c4c4;
+}
+.product__pagination_link-active {
+  color: #f16d7f;
 }
 
 .hero {
