--- a/css/style.scss
+++ b/css/style.scss
@@ -954,6 +954,11 @@ body {
 
         display: flex;
     }
+
+    &__conteiner_chg-product-page {
+        justify-content: center;
+        height: 341px;
+    }
 }
 
 // текст надо фото слева
@@ -999,6 +1004,11 @@ body {
         gap: 17px;
         flex-direction: column;
         width: 220px;
+    }
+
+    &_chg-product-page {
+        align-items: center;
+        flex-direction: row;
     }
 }
 
