--- a/css/style.css
+++ b/css/style.css
@@ -833,10 +833,15 @@ body {
 .change_option {
   align-items: center;
   flex-direction: row;
+  gap: 81px;
 }
 .change_item {
   gap: 21px;
   flex-direction: column;
+  align-items: center;
+}
+.change_header {
+  width: 310px;
   align-items: center;
 }
 
