--- a/css/style.scss
+++ b/css/style.scss
@@ -1031,11 +1031,17 @@ body {
     &_option {
         align-items: center;
         flex-direction: row;
+        gap: 81px;
     }
 
     &_item {
         gap: 21px;
         flex-direction: column;
+        align-items: center;
+    }
+
+    &_header {
+        width: 310px;
         align-items: center;
     }
 }
