--- a/css/style.scss
+++ b/css/style.scss
@@ -544,6 +544,13 @@ body {
     }
 }
 
+// Страница Корзина cart
+.cart {
+    padding-top: 44px;
+    padding-bottom: 62px;
+}
+
+// страница product все товары и фильтры
 .category-product {
     padding-top: 60px;
     padding-bottom: 110px;
