--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,3 @@
-
 /*
 * Prefixed by https://autoprefixer.github.io
 * PostCSS: v8.4.14,
@@ -548,6 +547,22 @@ body {
 .cart {
     padding-top: 44px;
     padding-bottom: 62px;
+
+    &__menage {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__link {
+        line-height: 1.2;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #4a4a4a;
+
+        padding: 18px 38px;
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+    }
 }
 
 // страница product все товары и фильтры
