--- a/css/style.css
+++ b/css/style.css
@@ -437,12 +437,14 @@ body {
 }
 
 .cart {
-  padding-top: 44px;
-  padding-bottom: 62px;
+  padding-top: 90px;
+  padding-bottom: 80px;
 }
 .cart__menage {
   display: flex;
   justify-content: space-between;
+  padding-top: 44px;
+  padding-bottom: 62px;
 }
 .cart__link {
   line-height: 1.2;
@@ -452,6 +454,29 @@ body {
   padding: 18px 38px;
   background-color: #ffffff;
   border: 1px solid #eaeaea;
+}
+.cart .shiping-info__adress {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+}
+.cart .shiping-info__title {
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+}
+.cart .shiping-info__input {
+  width: 355px;
+  height: 45px;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+  padding: 16px 18px;
+}
+.cart .shiping-info__button {
+  width: 100px;
+  height: 35px;
 }
 
 .category-product {
