--- a/css/style.scss
+++ b/css/style.scss
@@ -545,12 +545,14 @@ body {
 
 // Страница Корзина cart
 .cart {
-    padding-top: 44px;
-    padding-bottom: 62px;
+    padding-top: 90px;
+    padding-bottom: 80px;
 
     &__menage {
         display: flex;
         justify-content: space-between;
+        padding-top: 44px;
+        padding-bottom: 62px;
     }
 
     &__link {
@@ -562,6 +564,36 @@ body {
         padding: 18px 38px;
         background-color: #ffffff;
         border: 1px solid #eaeaea;
+    }
+
+    .shiping-info {
+
+        &__adress {
+            display: flex;
+            flex-direction: column;
+            gap: 22px;
+        }
+
+        &__title {
+            font-size: 16px;
+            line-height: 1.2;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: $colorMainText;
+        }
+
+        &__input {
+            width: 355px;
+            height: 45px;
+            background-color: #ffffff;
+            border: 1px solid #eaeaea;
+            padding: 16px 18px;
+        }
+
+        &__button {
+            width: 100px;
+            height: 35px;
+        }
     }
 }
 
