--- a/css/style.css
+++ b/css/style.css
@@ -477,6 +477,14 @@ body {
 .cart .shiping-info__button {
   width: 100px;
   height: 35px;
+  font-size: 11px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  padding: 12px 10px;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
 }
 
 .category-product {
