блок купон готов

--- a/css/style.css
+++ b/css/style.css
@@ -455,10 +455,19 @@ body {
   background-color: #ffffff;
   border: 1px solid #eaeaea;
 }
+.cart .shiping-info {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
 .cart .shiping-info__adress {
   display: flex;
   flex-direction: column;
   gap: 22px;
+}
+.cart .shiping-info__discount {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
 .cart .shiping-info__title {
   font-size: 16px;
@@ -475,7 +484,7 @@ body {
   padding: 16px 18px;
 }
 .cart .shiping-info__button {
-  width: 100px;
+  width: 118px;
   height: 35px;
   font-size: 11px;
   line-height: 1.2;
