--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,15 @@ body {
   flex-direction: column;
   gap: 24px;
 }
+.cart .shiping-info__total {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 360px;
+  height: 214px;
+  background-color: #f5f3f3;
+  padding: 42px;
+}
 .cart .shiping-info__title {
   font-size: 16px;
   line-height: 1.2;
@@ -494,6 +503,25 @@ body {
   padding: 12px 10px;
   background-color: #ffffff;
   border: 1px solid #eaeaea;
+}
+.cart .shiping-info__button_total {
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #f16d7f;
+  padding: 12px 42px;
+}
+.cart .shiping-info__sub {
+  display: flex;
+  justify-content: space-between;
+  width: 102px;
+}
+.cart .shiping-info_grand {
+  width: 165px;
 }
 
 .category-product {
