--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,11 @@ body {
   background-color: #ffffff;
   border: 1px solid #eaeaea;
 }
+.cart .shiping-info__button:hover {
+  border: 1px solid #f16d7f;
+  cursor: pointer;
+  color: #f16d7f;
+}
 .cart .shiping-info__button_total {
   width: 100%;
   height: 50px;
@@ -520,8 +525,32 @@ body {
   justify-content: space-between;
   width: 102px;
 }
+.cart .shiping-info__line {
+  background-color: #e2e2e2;
+  height: 1px;
+  width: 100%;
+  margin-top: 22px;
+  margin-bottom: 17px;
+}
+.cart .shiping-info__sub-total {
+  font-size: 11px;
+  line-height: 1.2;
+  text-transform: uppercase;
+  color: #4a4a4a;
+}
+.cart .shiping-info__grand-total {
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+}
+.cart .shiping-info__grand-total_pink {
+  color: #f16d7f;
+}
 .cart .shiping-info_grand {
   width: 165px;
+  margin-top: 14px;
 }
 
 .category-product {
