--- a/css/style.scss
+++ b/css/style.scss
@@ -621,6 +621,12 @@ body {
             border: 1px solid #eaeaea;
         }
 
+        &__button:hover {
+            border: 1px solid $colorPink;
+            cursor: pointer;
+            color: $colorPink;
+        }
+
         &__button_total {
             width: 100%;
             height: 50px;
@@ -639,8 +645,36 @@ body {
             width: 102px;
         }
 
+        &__line {
+            background-color: #e2e2e2;
+            height: 1px;
+            width: 100%;
+            margin-top: 22px;
+            margin-bottom: 17px;
+        }
+
+        &__sub-total {
+            font-size: 11px;
+            line-height: 1.2;
+            text-transform: uppercase;
+            color: #4a4a4a;
+        }
+
+        &__grand-total {
+            font-size: 16px;
+            line-height: 1.2;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: $colorMainText;
+        }
+
+        &__grand-total_pink {
+            color: $colorPink;
+        }
+
         &_grand {
             width: 165px;
+            margin-top: 14px;
         }
     }
 }
@@ -1150,9 +1184,6 @@ body {
         align-items: center;
     }
 }
-
-
-
 
 /* блок subscrybe */
 .subscrybe {
