--- a/css/style.scss
+++ b/css/style.scss
@@ -566,6 +566,23 @@ body {
         border: 1px solid #eaeaea;
     }
 
+    .shopping-list {
+        display: grid;
+        grid-template-columns: [start] 500px [line2] 1fr [line3] 1fr [line4] 1fr [line5] 1fr [line6] 1fr;
+
+        border-bottom: 1px solid #e2e2e2;
+        padding-bottom: 20px;
+
+        &__title {
+            font-size: 13px;
+            line-height: 20px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: -0.015em;
+            color: $colorMainText;
+        }
+    }
+
     .shiping-info {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -645,12 +662,14 @@ body {
             width: 102px;
         }
 
+        // шаблон подчеркивания
         &__line {
             background-color: #e2e2e2;
             height: 1px;
             width: 100%;
             margin-top: 22px;
             margin-bottom: 17px;
+            box-sizing: border-box;
         }
 
         &__sub-total {
