--- a/css/style.css
+++ b/css/style.css
@@ -455,6 +455,34 @@ body {
   background-color: #ffffff;
   border: 1px solid #eaeaea;
 }
+.cart__unit {
+  padding-top: 22px;
+}
+.cart__unit-about {
+  display: flex;
+  gap: 22px;
+}
+.cart__unit-head {
+  padding-top: 13px;
+  padding-bottom: 28px;
+  font-size: 13px;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+.cart__unit-text {
+  font-size: 13px;
+  line-height: 20px;
+  color: #575757;
+  font-weight: 700;
+}
+.cart__unit-text:last-of-type {
+  padding-top: 5px;
+}
+.cart__unit-span {
+  font-weight: 300;
+  color: #6f6e6e;
+  padding-left: 5px;
+}
 .cart .shopping-list {
   display: grid;
   grid-template-columns: [start] 500px [line2] 1fr [line3] 1fr [line4] 1fr [line5] 1fr [line6] 1fr;
