--- a/css/style.scss
+++ b/css/style.scss
@@ -566,6 +566,41 @@ body {
         border: 1px solid #eaeaea;
     }
 
+    &__unit {
+        padding-top: 22px;
+    }
+
+    &__unit-about {
+        display: flex;
+        gap: 22px;
+    }
+
+    &__unit-head {
+        padding-top: 13px;
+        padding-bottom: 28px;
+
+        font-size: 13px;
+        line-height: 1.2;
+        text-transform: uppercase;
+    }
+
+    &__unit-text {
+        font-size: 13px;
+        line-height: 20px;
+        color: #575757;
+        font-weight: 700;
+    }
+
+    &__unit-text:last-of-type {
+        padding-top: 5px;
+    }
+
+    &__unit-span {
+        font-weight: 300;
+        color: #6f6e6e;
+        padding-left: 5px;
+    }
+
     .shopping-list {
         display: grid;
         grid-template-columns: [start] 500px [line2] 1fr [line3] 1fr [line4] 1fr [line5] 1fr [line6] 1fr;
@@ -573,6 +608,7 @@ body {
         border-bottom: 1px solid #e2e2e2;
         padding-bottom: 20px;
 
+        // заголовок таблицы в корзине
         &__title {
             font-size: 13px;
             line-height: 20px;
@@ -581,6 +617,8 @@ body {
             letter-spacing: -0.015em;
             color: $colorMainText;
         }
+
+
     }
 
     .shiping-info {
