верстка страницы завершена, блоки добавлены. поготовлен шаблон товара в строке

--- a/css/style.css
+++ b/css/style.css
@@ -440,7 +440,7 @@ body {
   padding-top: 90px;
   padding-bottom: 80px;
 }
-.cart__menage {
+.cart__manage {
   display: flex;
   justify-content: space-between;
   padding-top: 44px;
