--- a/css/style.css
+++ b/css/style.css
@@ -430,11 +430,20 @@ body {
   text-transform: uppercase;
   color: #f16d7f;
 }
+.breadcrumbs__list {
+  display: flex;
+  list-style: none;
+}
 .breadcrumbs__link {
   line-height: 20px;
   font-weight: 300;
   text-transform: uppercase;
   color: #636363;
+}
+.breadcrumbs__item:not(:last-child):after {
+  content: "/";
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .checkout__conteiner {
