изменен блок сортировки, использоваты теги select

--- a/css/style.css
+++ b/css/style.css
@@ -653,6 +653,10 @@ body {
   display: flex;
 }
 
+.product {
+  display: flex;
+  flex-direction: column;
+}
 .product_type a {
   line-height: 26px;
   color: #6f6e6e;
@@ -729,18 +733,19 @@ body {
   align-items: center;
   margin-bottom: 48px;
 }
-.product__block {
-  display: flex;
-  align-items: center;
+.product__title {
   background-color: #ffffff;
   border: 1px solid #ebebeb;
   margin-left: 10px;
+  padding: 8px 13px;
 }
-.product__name {
+.product__select {
   padding: 8px 8px 8px 13px;
+  border: 1px solid #ebebeb;
+  text-transform: capitalize;
 }
-.product__name_border {
-  border-left: 1px solid #ebebeb;
+.product__select:focus {
+  border: 1px solid #f16d7f;
 }
 .product_cards {
   display: grid;
