--- a/css/style.scss
+++ b/css/style.scss
@@ -805,11 +805,40 @@ body {
 
 // блок с каталогом
 .category {
-    &__list {
+    &__summary {
         width: 243px;
         padding-bottom: 18px;
         display: flex;
+        justify-content: space-between;
+
+        line-height: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+
+        border-bottom: 1px solid #ebebeb;
+        border-left: 5px solid $colorPink;
+        color: #6f6e6e;
+        padding: 10px;
     }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        padding-top: 22px;
+        padding-left: 12px;
+
+        line-height: 33px;
+        color: #6f6e6e;
+    }
+
+    &__list[open] .category__summary {
+        color: $colorPink;
+    }
+}
+
+.category__list:not(:last-child) {
+    content: "";
+    padding-bottom: 18px;
 }
 
 // блок с фильтрами и товарами
