--- a/css/style.scss
+++ b/css/style.scss
@@ -622,6 +622,16 @@ body {
     &__unit-about {
         display: flex;
         gap: 22px;
+        width: 300px;
+        height: 115px;
+    }
+
+    &__unit-about img{
+        height: 100%;
+    }
+
+    &__unit-about:hover {
+        box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
     }
 
     &__unit-title_center {
