--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,10 @@ body {
   background-color: #ffffff;
   border: 1px solid #eaeaea;
 }
+.cart__link:hover {
+  border: 1px solid #f16d7f;
+  color: #f16d7f;
+}
 .cart__unit {
   padding-top: 22px;
   align-items: center;
