--- a/css/style.css
+++ b/css/style.css
@@ -593,7 +593,8 @@ body {
   height: 45px;
   background-color: #ffffff;
   border: 1px solid #eaeaea;
-  padding: 16px 18px;
+  padding: 12px 18px;
+  color: #b1b1b1;
 }
 .cart .shiping-info__button {
   width: 118px;
