--- a/css/style.scss
+++ b/css/style.scss
@@ -733,7 +733,8 @@ body {
             height: 45px;
             background-color: #ffffff;
             border: 1px solid #eaeaea;
-            padding: 16px 18px;
+            padding: 12px 18px;
+            color: #b1b1b1;
         }
 
         &__button {
